# cobotics_modules

./: .gitignore  README.txt  install.txt
cobotics_control/: CMakeLists.txt
cobotics_control/gazebo/models/iiwa_cap_link/: model.config  model.sdf  model.sdf.old
cobotics_control/gazebo/models/skeleton_forearm_cap/: model.config  model.sdf  model.sdf.old
cobotics_control/gazebo/models/user_avatar_ybot_skeleton/: model.sdf
cobotics_control/include/osim_ybot_plugin/: osim_ybot_plugin.h
cobotics_control/launch/: neuromusculoskeletal_demo.launch
cobotics_control/src/osim_ybot_plugin/: osim_ybot_plugin.cpp
cobotics_control/worlds/: cap_dataset.world  neuromusculoskeletal_demo.sdf
edlut/: .gitignore  README.md  build.sh
edlut/EDLUT_source_code/: configure  rules.makefile
edlut/EDLUT_source_code/include/neuron_model/: NeuronModel.h  (+43 more)
edlut/ROS_OpenSim/edlut_ros_osim/: CMakeLists.txt  package.xml
edlut/ROS_OpenSim/edlut_ros_osim/cfg/: DynParameters.cfg  DynParameters_2Entries.cfg  MaeDynParameters.cfg  SynchronizerDynParameters.cfg  WeightsDynParameters.cfg
edlut/ROS_OpenSim/edlut_ros_osim/elbow_flexion_trajectory/: Network_1_joint_10MF_per_RBF_4MF_per_GrC_100DCN.cfg  Network_1_joint_10MF_per_RBF_4MF_per_GrC_100DCN_LearningOFF.cfg  Weights_1_joint_10MF_per_RBF_4MF_per_GrC_100DCN.cfg  elbow_flexion_trajectory_joint_position_rad_oneJoint.txt  elbow_flexion_trajectory_joint_velocity_rad_oneJoint.txt
edlut/ROS_OpenSim/edlut_ros_osim/include/edlut_ros_osim/: Q_TrajectoryController_compactDelay.h  Q_TrajectoryController_compactDelay_andMuscleActivation.h  Q_TrajectoryGenerator.h  Q_TrajectoryGenerator_andMuscleActivation.h  ROSErrorCalculatorCompact.h  ROSErrorCalculator_FullStateCompactDelay.h  ROSFullStateCalculatorCompact.h  ROSPoissonGenerator_compactDelay.h  ROSSpikeDecoderCompact.h  ROSSpikeDecoderCompactFutureTorque.h  ROSSpikeDecoderCompactFutureTorque_compactDelay.h  ROSSpikeDecoderCompact_AgonistAntagonist.h  ROSTopicInputDriver.h  ROSTopicOutputDriver.h  SynchronizerDynParams.h  TrafficDelay.h
edlut/ROS_OpenSim/edlut_ros_osim/launch/1DoF/cerebellum_SC/: cerebellar_spinalCordNetwork_control_elbow_flexion.launch
edlut/ROS_OpenSim/edlut_ros_osim/msg/: AnalogCompact_AgonistAntagonist.msg  MarkerKinematicsCompact.msg
edlut/ROS_OpenSim/edlut_ros_osim/scripts/: run_edlut_osim.sh
edlut/ROS_OpenSim/edlut_ros_osim/src/: MAE_position.py  MAE_velocity.py  Q_TrajectoryController_compactDelay.cpp  Q_TrajectoryController_compactDelay_andMuscleActivation.cpp  Q_TrajectoryGenerator.cpp  Q_TrajectoryGenerator_andMuscleActivation.cpp  ROSErrorCalculatorCompact.cpp  ROSErrorCalculator_FullStateCompactDelay.cpp  ROSFullStateCalculatorCompact.cpp  ROSPoissonGenerator_compactDelay.cpp  ROSRBFBank_compactDelay.cpp  ROSSpikeDecoderCompact.cpp  ROSSpikeDecoderCompactFutureTorque.cpp  ROSSpikeDecoderCompactFutureTorque_compactDelay.cpp  ROSSpikeDecoderCompact_AgonistAntagonist.cpp  ROSTopicInputDriver.cpp  ROSTopicOutputDriver.cpp  RasterPlot.py  RasterPlot_2Entries.py  RasterPlot_and_AnalogSignal.py  RasterPlot_and_AnalogSignal_CompactDelay.py  SynchronizerDynParams.cpp  TrajectoryPlot2.py  agonist_antagonist_publisher.py  deg_file_to_rad.py  error_estimator_node_compact.cpp  error_estimator_node_full_state_compactDelay.cpp  full_state_node.cpp  joint_torque_pd_osim.py  marker_position_file_add_way_back.py  muscle_activation_from_file.py  muscle_activation_pd.py  muscle_activation_publisher.py  plot_file.py  plot_files_pos_and_vel.py  plot_marker_position_file.py  poisson_generator_node_delay_compactDelay_EventDriven.cpp  q_trajectory_generator_node_compactDelay.cpp  q_trajectory_generator_node_compactDelay_and_muscle_activation.cpp  rbf_node_sync_compactDelay_EventDriven.cpp  (+18 more)
edlut/ROS_OpenSim/models/: 1dof_Millard.osim  vtp_to_dae.py
edlut/ROS_OpenSim/osim_python/: CMakeLists.txt  launch_python.py  package.xml  setup.py
edlut/ROS_OpenSim/spinal_cord/: CMakeLists.txt  package.xml  setup.py
kuka_iiwa_hbp/: readme.md
kuka_iiwa_hbp/kuka_iiwa_control_hbp/: CMakeLists.txt  package.xml
kuka_iiwa_hbp/kuka_iiwa_control_hbp/cfg/: Controller.cfg  TrajectoryDynamics.cfg  controllers.yaml
kuka_iiwa_hbp/kuka_iiwa_control_hbp/launch/: kuka_iiwa_control_hbp.launch
kuka_iiwa_hbp/kuka_iiwa_control_hbp/msg/: DesiredTrajectory.msg  EndEffectorError.msg  MyJointState.msg
kuka_iiwa_hbp/kuka_iiwa_control_hbp/rviz/: my_rviz.rviz
kuka_iiwa_hbp/kuka_iiwa_control_hbp/scripts/: DMP_R2H.py  OrientationDynamics.py  controller.py  discrete_lowpass.py  trajectory_generation.py
kuka_iiwa_hbp/kuka_iiwa_description/urdf/: iiwa_gripper.urdf  iiwa_gripper_no_world.urdf  iiwa_gripper_no_world_copy_7_10_2020.urdf  iiwa_gripper_no_world_no_gripper.urdf  iiwa_gripper_no_world_no_gripper_no_mass.urdf
kuka_iiwa_hbp/kuka_iiwa_gazebo/launch/: kuka_iiwa.launch
muscle_model_plugin/: CMakeLists.txt
muscle_model_plugin/src/: muscle_model_plugin.cpp
prednet_segmentation/: CMakeLists.txt  PredNet.py  package.xml  setup.py
prednet_segmentation/scripts/: prednet.sh  run_prednet.py
prednet_segmentation/src/prednet_segmentation/: __init__.py  hConvGRUCell.py
saliency_module/scripts/: run_saliency.py  run_saliency_img.py
world_step_control/: CMakeLists.txt  package.xml  setup.py
world_step_control/include/world_step_control/: constants.h  module.h  module_control.h  py_module.h  world_step_control.h  world_step_control_plugin.h
world_step_control/msg/: ModuleExecutionResult.msg
world_step_control/src/: module.cpp  module_control.cpp  py_module.cpp  register_modules.cpp  world_step_control.cpp  world_step_control_node.cpp  world_step_control_plugin.cpp
world_step_control/src/world_step_control/: __init__.py
world_step_control/srv/: ModuleExecuteStep.srv  RegisterModule.srv  UnregisterModule.srv  WorldSteps.srv
world_step_control_plugin/: CMakeLists.txt  package.xml
world_step_control_plugin/cmake/: env_setup.sh.in
world_step_control_plugin/include/world_step_control/: world_step_control_plugin.h
world_step_control_plugin/src/: world_step_control.cpp  world_step_control_plugin.cpp
(+140 files in other folders)
